2002-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Apply prefix/suffix transformations to ImageMagick program names
    which are substituted into delegates.mgk.  This fix was requested
    by Glenn Randers-Pehrson.

2002-08-25  Cristy  <cristy@mystic.es.dupont.com>
  * Arcs are now rendered properly.
  * Use -authenticate to specifiy a password when viewing encrypted PDF's.
  * -page was previouly being ignored.
  * Configure files are returned as blobs now (suggested by William
    Radcliffe).

2002-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added --disable-installed option to configure to support building
    an ImageMagick which is not installed via hard-coded paths. This
    is intended to be used for the ad-hoc binary distributions built by
    ImageMagick Studio.
  * The UseInstalledImageMagick define is to be used by builds formally
    installed under a prefix, or via the Windows registry.
  * Replaced GetMagickConfigurePath() with the three functions
    FindConfigurationFile(), FindFontFile(), and FindModuleFile().
  * Re-implemented InitializeMagick() to try harder at finding the
    uninstalled ImageMagick without the help of MAGICK_HOME.  In the future,
    it can try even harder.
  * Unix binaries packages (built with --disable-installed) should now
    work using the same file layout as the distribution file.  There is
    no longer a need to put all files in the same directory.

2002-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Under Windows, define UseInstalledImageMagick to locate components
    using the registry rather than scanning the filesystem.

2002-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added DrawSetTextEncoding() function to specify text encoding
    (e.g. "UTF-8").

2002-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Extend 'convert -list type' output so it prints more details.
  * Fix draw.c problem when specifying font family names that
    contain spaces.
