@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-30  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
+  * QuantizeImage() did not always produce proper bilevel images.
+
 2002-08-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Apply prefix/suffix transformations to ImageMagick program names
     which are substituted into delegates.mgk.  This fix was requested
