@@ -1,3 +1,6 @@
+2002-08-30  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+  * QuantizeImage() did not always produce proper bilevel images.
+
 2002-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Apply prefix/suffix transformations to ImageMagick program names
     which are substituted into delegates.mgk.  This fix was requested
